fix: .ts create-projects codebase

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -40,7 +40,7 @@
             <div class="list-title">
                 <p class="title">Exiba e gerencie seus projetos no seu perfil</p>
                 <div class="add-btn">
-                    <a href="/v1/profile/<%= context.id %>/projects"><p class="add-btn-text">Adicionar</p></a>
+                    <a href="/v1/profile/<%= context.ProfileData.id %>/projects"><p class="add-btn-text">Adicionar</p></a>
                 </div>
             </div>
             <% } %>
