--- a/src/views/editProfile.ejs
+++ b/src/views/editProfile.ejs
@@ -9,10 +9,11 @@
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <script src="/utils/editProfileScript.js"></script>
+    
     <!-- ATUALIZA FOTO DE PERFIL -->
     <script src="/utils/updateProfileImage.js"></script>
 
-    <script src="/utils/editProfileScript.js"></script>
 
 </head>
 <body>
@@ -32,7 +33,7 @@
                     <p class="change-image text-title">Alterar foto de perfil</p>
                 </div>
                 <div class="profile-image-container">
-                    <img class="user-image profile-image" src="data:<%= context.userImage[0].image_content_type %>;base64,<%= context.userImage[0].image_data.toString('base64')%>" alt="profile-image">
+                    <img class="user-image profile-image" src="data:<%= context.data.ProfileImageInfo[0].image_content_type %>;base64,<%= context.data.ProfileImageInfo[0].image_data.toString('base64')%>" alt="profile-image">
                 </div>
                 <div class="change-image-btn">
                     <label for="profile-image-input" class="profile-image-label">Alterar Imagem
@@ -43,23 +44,23 @@
 
             <div class="description-group bs-st sl-ipt">
                 <p class="change-desc text-title">Alterar descricao</p>
-                <textarea name="" class="description-field" spellcheck="false"><%= context.profileDescription %></textarea>
+                <textarea name="" class="description-field" spellcheck="false"><%= context.data.description %></textarea>
             </div>
 
             <div class="grad-group bs-st sl-ipt">
                 <div class="univ-group">
                     <p class="change-univ text-title">Alterar Universidade</p>
                     <select name="user-univ" class="user-univ user-univ-select">
-                        <option value="<%= context.UserUniv.university_name %>"><%= context.UserUniv.university_name %></option>
-                        <% for(let i=0; i< context.Universities.length; i++){ %>
-                            <option value="<%= context.Universities[i].university_name %>"><%= context.Universities[i].university_name %></option>
+                        <option value="<%= context.data.user.university %>"><%= context.data.user.university %></option>
+                        <% for(let i=0; i< context.universities.length; i++){ %>
+                            <option value="<%= context.universities[i] %>"><%= context.universities[i] %></option>
                         <% } %>
                     </select>
                 </div>
                 <div class="course-group">
                     <p class="change-course text-title">Alterar Curso de Graduacao</p>
                     <select id="course-list" class="user-course">
-                        <option value="<%= context.UserData.user_course %>"><%= context.UserData.user_course.toUpperCase() %></option>
+                        <option value="<%= context.data.user_course %>"><%= context.data.user_course %></option>
                     </select>
                 </div>
             </div>
@@ -69,16 +70,16 @@
                 <div class="state-container">
                     <p class="change-state">Alterar Estado</p>
                     <select class="user-state">
-                        <option value="<%= context.userLocation[0].state_name %>"><%= context.userLocation[0].state_name %></option>
-                        <% for(let i=0; i<context.States.length; i++){ %>
-                            <option value="<%= context.States[i].state_name %>"><%= context.States[i].state_name %></option>
+                        <option value="<%= context.data.user.state %>"><%= context.data.user.state %></option>
+                        <% for(let i=0; i< context.states.length; i++){ %>
+                            <option value="<%= context.states[i].SIGLA %>"><%= context.states[i].NOME %></option>
                         <% } %>
                     </select>
                 </div>
                 <div class="city-container">
                     <p class="change-city">Alterar Cidade</p>
                     <select class="user-city" id="user-city-select">
-                        <option value="<%= context.userLocation[0].city_name %>"><%= context.userLocation[0].city_name %></option>
+                        <option value="<%= context.data.user.city %>"><%= context.data.user.city %></option>
                     </select>
                 </div>
             </div>
@@ -86,11 +87,11 @@
             <div class="interest-container bs-st sl-ipt">
                 <p class="interest-title text-title">Seus Interesses</p>
                 <div class="interest-group">
-                    <% for(let i=0; i<context.interestTopics.length; i++){ %>
-                        <input type="text" name="" spellcheck="false" class="user-interest" value="<%= context.interestTopics[i].topic %>">
+                    <% for(let i=0; i<context.data.TopicsOfInterestProfile.length; i++){ %>
+                        <input type="text" name="" spellcheck="false" class="user-interest" value="<%= context.data.TopicsOfInterestProfile.length[i] %>">
                     <% } %>
-                    <% if(context.interestTopics.length < 3){ %>
-                        <% for(let j=0; j<3-context.interestTopics.length; j++){ %>
+                    <% if(context.data.TopicsOfInterestProfile.length < 3){ %>
+                        <% for(let j=0; j< 3-context.data.TopicsOfInterestProfile.length; j++){ %>
                             <input type="text" name="" spellcheck="false" class="user-interest" value="" placeholder="Insira um tópico de interesse">
                         <% } %>
                     <% } %>
