--- a/src/views/editProject.ejs
+++ b/src/views/editProject.ejs
@@ -14,10 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     
-    <script src="/utils/loadImage.js"></script>
-    <script src="/utils/updateProjectImage.js"></script>
+    <!-- <script src="/utils/loadImage.js"></script> -->
+    <!-- <script src="/utils/updateProjectImage.js"></script> -->
+
     <!-- AUTO RESIZE -->
-    <script src="/utils/textAreaAutoResize.js" ></script>
+    <!-- <script src="/utils/textAreaAutoResize.js" ></script> -->
 
     <title>Editar Projeto</title>
 </head>
