--- a/src/views/partials/edit-header.ejs
+++ b/src/views/partials/edit-header.ejs
@@ -8,7 +8,7 @@
         <div class="academic-logo-container">
             <img src="/images/white-logo.png" alt="academic-logo" class="academic-logo">
         </div>
-        <a class="edit-button" href="/v1/profile/<%= context.id %>/edit">
+        <a class="edit-button" href="/v1/profile/<%= context.ProfileData.id %>/edit">
             <div class="edit-container">
                 <p class="edit-btn">Editar</p>
             </div>
